# cpp-compile

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  compile.sh  cpp-compile.Dockerfile  pipeline-compile.sh  project.Dockerfile
.github/workflows/: build.yaml
cmake/: PVS-Studio-conf.cmake  Sanitizers.cmake
cmake/extra/: PVS-Studio.cmake
